dynamic categories added

--- a/index.html
+++ b/index.html
@@ -91,12 +91,22 @@
                 <!-- TODO sort button -->
                 <div class="lg:navbar-end">
                     <button
-                        class="btn font-medium text-lg text-white bg-btnAccent">
+                        class="btn font-medium text-lg text-primary bg-accent">
                         Sort
                     </button>
                 </div>
             </nav>
         </header>
+
+        <!-- SECTION Dynamic Category Section -->
+        <section
+            id="categories"
+            class="w-11/12 xl:w-2/6 lg:w-3/6 sm:w-4/6 m-auto grid grid-cols-1 sm:grid-cols-4 gap-3 mt-8 mb-10">
+            <!-- <button class="btn font-medium text-lg text-white bg-btnAccent">
+                All
+            </button> -->
+        </section>
+        <!-- !SECTION Dynamic Category Section End -->
 
         <!-- !SECTION Header End -->
         <!-- Link JavaScript files -->
